# ai-sysdesign-knowledge

./: .gitignore  .mcp.json  INDEX.md  LICENSE  README.md
.claude/: README.md  settings.json
.claude/agents/: case-study-reviewer.md  cross-ref-finder.md  reference-validator.md  topic-researcher.md
.claude/mcp/kb-mcp/: README.md  pyproject.toml  server.py
.claude/mcp/kb-mcp/tests/: test_kb_mcp.py
.github/: README.md
.github/workflows/: post-merge-cross-ref.yml  quarterly-ref-validation.yml  weekly-topic-research.yml
agents/: README.md  ai-sysdesign-knowledge-writer.md
case-studies/01-foundations/: S1-01_youtube_recommendation_end_to_end.md  S1-02_tiktok_monolith_realtime_recommendation.md  S1-03_pinterest_pinsage_graph_retrieval.md
case-studies/02-model-development/: S2-01_meta_dlrm_architecture.md  S2-02_wide_deep_deepfm_dcn_evolution.md
case-studies/03-modern-stack/: S3-01_vllm_paged_attention_continuous_batching.md  S3-02_production_rag_system_architecture.md  S3-03_vector_db_hnsw_ivf_pq.md
case-studies/04-production/: S4-01_uber_michelangelo_feature_store.md  S4-02_ab_testing_experimentation_platforms.md
docs/: planned.yaml  progress.md  style-guide.md  terminology.md
proposals/: PROPOSAL_S3-06_speculative_decoding_eagle_mtp.md  PROPOSAL_S3-07_disaggregated_prefill_decode_serving.md  PROPOSAL_S3-08_long_context_llm_serving.md  PROPOSAL_S3-09_test_time_compute_reasoning_serving.md  PROPOSAL_S3-10_structured_output_constrained_decoding.md
scripts/: build_index.py  install_user_agents.sh  validate_refs.py
templates/: case_study.md
(+6 files in other folders)
